// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox UI component renders when checked 1`] = `
<Checkbox__Container
  className="undefined hasLabel e2e-checkbox"
  size="22px"
>
  <Checkbox__CheckboxContainer
    checked={true}
    innerRef={[Function]}
    onClick={[Function]}
    onKeyPress={[Function]}
    size="22px"
    tabIndex={0}
  >
    <Checkbox__CheckmarkIcon
      name="checkmark"
    />
  </Checkbox__CheckboxContainer>
  <Checkbox__Label
    onClick={[Function]}
  >
    test
  </Checkbox__Label>
</Checkbox__Container>
`;

exports[`Checkbox UI component renders when unchecked 1`] = `
<Checkbox__Container
  className="undefined hasLabel e2e-checkbox"
  size="22px"
>
  <Checkbox__CheckboxContainer
    checked={false}
    innerRef={[Function]}
    onClick={[Function]}
    onKeyPress={[Function]}
    size="22px"
    tabIndex={0}
  />
  <Checkbox__Label
    onClick={[Function]}
  >
    test
  </Checkbox__Label>
</Checkbox__Container>
`;
